src/test/ui/nll/return-ref-mut-issue-46557.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/return-ref-mut-issue-46557.rs:17:21
   |
LL |     let ref mut x = 1234543; //~ ERROR borrowed value does not live long enough [E0597]
   |                     ^^^^^^^ temporary value does not live long enough
LL |     x
LL | }
   | - temporary value only lives until here
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
